fix: index.html position and fix url github

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammad Hadi Royan Firdaus</title>
-    <link rel="stylesheet" href="css/output.css" />
-    <link rel="shortcut icon" href="images/logo.png" type="image/" />
+    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="shortcut icon" href="./public/images/logo.png" type="image/" />
 
     <link
       rel="stylesheet"
@@ -105,7 +105,7 @@
       <nav class="container mx-auto px-6 py-4">
         <div class="flex items-center justify-between">
           <a href="#" class="text-2xl font-bold text-blue-500">
-            <img src="images/logo.png" alt="" class="w-10 h-10" />
+            <img src="./public/images/logo.png" alt="" class="w-10 h-10" />
           </a>
 
           <!-- Mobile menu button -->
@@ -563,7 +563,7 @@
                 >About</a
               >
               <a
-                href="#project"
+                href="#projects"
                 class="hover:text-white text-gray-400 transition-colors duration-300"
                 >Project</a
               >
@@ -582,7 +582,7 @@
       </div>
     </footer>
 
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="./public/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script>
       AOS.init({
